syntax = "proto3";

package vega.commands.v1;
option go_package = "code.vegaprotocol.io/vega/protos/vega/commands/v1";

// Command to submit new Oracle data from third party providers
message OracleDataSubmission {
  // The supported Oracle sources
  enum OracleSource {
    // The default value
    ORACLE_SOURCE_UNSPECIFIED = 0;
    // Support for Open Oracle standard
    ORACLE_SOURCE_OPEN_ORACLE = 1;
    // Support for custom JSON data
    ORACLE_SOURCE_JSON = 2;
  }
  // The source from which the data is coming from
  OracleSource source = 1;
  // The data provided by the third party provider
  bytes payload = 2;
}
